argocd/apps/kargo/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo-ui
  namespace: kargo-system
  labels:
    app.kubernetes.io/name: kargo-ui
    app.kubernetes.io/component: networking
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cilium.io/backend-protocol: "https"
spec:
  hostnames:
    - kargo.civilsnut.se
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: gateway-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kargo-api
          port: 443
          weight: 1
