argocd/apps/kargo/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kargo-ui
  namespace: kargo-system
  labels:
    app.kubernetes.io/name: kargo-ui
    app.kubernetes.io/component: networking
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/upstream-vhost: "kargo-api.kargo-system.svc.cluster.local"
spec:
  tls:
  - hosts:
    - kargo.civilsnut.se
    secretName: civilsnut-se-wildcard-tls
  rules:
  - host: kargo.civilsnut.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kargo-api
            port:
              number: 443
